--- a/docs/governance/faq.mdx
+++ b/docs/governance/faq.mdx
@@ -1,30 +1,16 @@
 ---
-id: voting-power
-title: Voting Power
-pagination_label: Voting Power
-sidebar_label: Voting Power
+id: faq
+title: Frequently Asked Questions
+pagination_label: Frequently Asked Questions
+sidebar_label: Frequently Asked Questions
 description: Helium Documentation
 image: https://docs.helium.com/img/link-image.png
-slug: /vote-escrow/voting-power
+slug: /governance/faq
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
 
-The Helium Foundation has implemented HIP-70 and migrated our L1 to Solana. Voting on Helium
-Improvement Proposals are performed with vote escrowed tokens.
-
-## Key Take Aways
-
-- veHNT gives holders voting rights to determine the future of the Helium Network.
-- Post-migration, anyone can stake HNT to veHNT, and there will no longer be a 10,000 HNT minimum.
-- After the minimum lock-up period, HNT releases to the owner's wallet after the staking cooldown is
-  selected.
-
----
-
-## Frequently Asked Questions
-
-### What Is veHNT?
+## What Is veHNT?
 
 veHNT represents the voting power of the Helium Network.
 
@@ -36,7 +22,7 @@ Additionally, this provides other benefits, such as earning MOBILE or IOT tokens
 delegates their veHNT to those subDAOs, respectively. After the lock-up period ends, the same amount
 of HNT is released back to the owner's wallet and is now transferable, if needed.
 
-### What Are The Benefits of Staking HNT after the subDAOs launch?
+## What Are The Benefits of Staking HNT after the subDAOs launch?
 
 Now the Solana migration has been completed, stakers can use their staked veHNT to vote on proposals
 in the HeliumDAO and help the DAO make collective decisions, influencing the future of the Network.
@@ -45,7 +31,7 @@ Stakers will additionally be able to delegate veHNT to a subDAO for token reward
 to a subDAO will count towards the DAO Utility Score, the `V` value referenced in
 [HIP-51](https://github.com/helium/HIP/blob/main/0051-helium-dao.md#omni-protocol-poc-incentive-model).
 
-### Where Does My HNT Go if I Stake veHNT?
+## Where Does My HNT Go if I Stake veHNT?
 
 If you lock up your HNT for veHNT, your HNT will become veHNT and remain entirely in your wallet's
 custody. veHNT ownership is represented by a non-transferable Solana NFT held in your wallet. At the
@@ -53,7 +39,7 @@ end of the lock-up period, any received tokens need to be claimed, the position 
 then after a close position action is taken you will receive HNT back to your wallet 1:1 for the HNT
 you staked.
 
-### What Is a "Lock-Up" Period?
+## What Is a "Lock-Up" Period?
 
 A lock-up period is a window of time when users are not allowed to transfer their HNT.
 
@@ -63,7 +49,7 @@ day and 48 months selectable in days but with block granularity.
 Lock-up periods help incentivize long-term holders of HNT and deter short-term speculators and those
 with shorter-term interests in the governance of the Network.
 
-### What is Voting Power?
+## What is Voting Power?
 
 Voting power is the weight of your vote towards decisions made by the DAO or subDAO. The more veHNT
 you have, the more weight your vote has.
@@ -71,7 +57,7 @@ you have, the more weight your vote has.
 You can only increase your voting power by staking more HNT or extending an existing veHNT lock-up
 period for longer.
 
-### How to Choose a subDAO to Stake?
+## How to Choose a subDAO to Stake?
 
 [HIP-51](https://github.com/helium/HIP/blob/main/0051-helium-dao.md#omni-protocol-poc-incentive-model)
 defines that all subDAOs return a maximum of 6% of their earnings to their veHNT delegators and is
@@ -91,7 +77,7 @@ The more veHNT delegated to a subDAO the more the subDAO Utility score increases
 the subDAO gets at each epoch improving the HNT/subDAO Token ratio. But the more veHNT delegated,
 the more veHNT holders the 6% will have to be shared between.
 
-### How Will Staking Work By Using veHNT?
+## How Will Staking Work By Using veHNT?
 
 Anyone can stake any amount of HNT and lock it up for 1 day to 1461 days ( 48 months). You choose
 your unstaking date at the time of lock-up or decide to keep it on a rolling lock-up period, called
@@ -125,12 +111,12 @@ HNT-veHNT Position would need to be split into two Positions - by transferring s
 position within the same wallet. Then each position could delegate to a different subDAO. Similarly,
 wishing to extend the lock-up duration on parts of a Position requires a similar split by transfer.
 
-### How Can I Obtain veHNT?
+## How Can I Obtain veHNT?
 
 Staking HNT for veHNT will be done on [Realms](https://realms.heliumvote.com/dao/hnt) See the
 [Staking veHNT on Realms](/vote-escrow/realms) documentation
 
-### Is There a Staking "Genesis" Period?
+## Is There a Staking "Genesis" Period?
 
 For the first ten days after Helium's migration onto Solana, there was a 3x multiplier bonus for new
 veHNT stakers. This is called the "Landrush" multiplier.
@@ -149,7 +135,7 @@ For example:
 > Staking 20 HNT during this Landrush period with a lock duration of 24 months returns 3000 veHNT
 > (20x50x3), and at the end of the staking period, 20 HNT is returned to the wallet.
 
-### Will I Earn HNT by Staking For veHNT?
+## Will I Earn HNT by Staking For veHNT?
 
 **No.** HNT staked to veHNT will not earn more HNT, it will only return what they staked at the end
 of their selected lock-up period.
@@ -162,7 +148,7 @@ delegating to that subDAO.
 > claimable in your Helium Wallet. If you choose, this IOT can then be burned at the IOT subDAO
 > treasury for HNT, or you may hold your IOT tokens, or stake them into veIOT.
 
-### How much veHNT will I get for each lock-up period?
+## How much veHNT will I get for each lock-up period?
 
 The table below shows the approximate HNT to veHNT multiplier for example months of staking
 
@@ -186,7 +172,7 @@ migration.
 |      10       |      20.8      |     |      45       |      93.7      |
 |      11       |      22.9      |     |      48       |     100.0      |
 
-### Do I Have to Delegate My veHNT to a subDAO?
+## Do I Have to Delegate My veHNT to a subDAO?
 
 No. You can hold your veHNT as is or delegate to a subDAO at any time.
 
@@ -198,7 +184,7 @@ delegation rewards within that Epoch. A Solana Epoch is 24 hours long and starts
 
 :::
 
-### How Granular Is The veHNT Linear Decrease?
+## How Granular Is The veHNT Linear Decrease?
 
 The veHNT decay countdown starts when initiated from the Wallet app/Realms, either immediately in
 "decay" mode or after a "constant lockup" is unlocked and cooldown started.
@@ -216,7 +202,7 @@ After 1 day has passed after staking a single 1 HNT for 48 months, the quantity 
 wallet will decay from 100 veHNT to 99.86311 veHNT. This decrease will recur linearly over the
 remaining 48 months until it hits zero.
 
-### Can I Increase My Staking Lock-up Period At Any Time?
+## Can I Increase My Staking Lock-up Period At Any Time?
 
 Yes. You can increase your lock-up period by extending it to a maximum of 48 months at any time, and
 the increase activates at the start of the next epoch. If the veHNT is delegated you must
@@ -224,12 +210,12 @@ undelegate, change the period, redelegate, and lose delegation rewards within th
 those three actions take longer than an epoch or are split over two epochs then delegation rewards
 are lost for two Epochs.
 
-### Can I Decrease My Staking Period For Fast Access to My HNT and Take a Penalty?
+## Can I Decrease My Staking Period For Fast Access to My HNT and Take a Penalty?
 
 No. You define your lock-up period at the time of staking and cannot unstake or decrease the lock-up
 period for any reason.
 
-### Can I Automate Re-Staking?
+## Can I Automate Re-Staking?
 
 Yes, a constant rolling lock-up period is available called Constant Lock-up. The decay countdown
 start point will be need positive action to start the lock-up cooldown period.
@@ -238,19 +224,19 @@ start point will be need positive action to start the lock-up cooldown period.
 > will remain at 1000 veHNT until the decay countdown is activated and this will then decrease
 > linearly over 4 years to 0 veHNT and the HNT is returned.
 
-### Can I Transfer my veHNT or any of the veDNTs to Someone Else?
+## Can I Transfer my veHNT or any of the veDNTs to Someone Else?
 
 No. veHNT and the like are fully non-transferable and represent your voting power in the Network. It
 is not a token. It is represented in the wallet by a non-transferable NFT.
 
-### How Do I Buy veHNT or Any of the veDNTs?
+## How Do I Buy veHNT or Any of the veDNTs?
 
 You cannot buy veHNT, veIOT, or veMOBILE. They are not tradable tokens. veHNT can only be obtained
 by staking HNT with a lock-up period. Likewise, for veIOT or veMOBILE.
 
 veHNT and veDNTs have no price in the larger crypto markets.
 
-### What Is the DAO Utility Score?
+## What Is the DAO Utility Score?
 
 The DAO Utility score is described in [HIP-51](https://github.com/helium/HIP/issues/336)
 
@@ -272,7 +258,7 @@ The two other ways the DAO Utility score can be increased are:
 2. Increasing the Data Credits used to onboard the number of Hotspots for that subDAO. This
    increases the `A` value in the Utility Score.
 
-### Will My subDAO Earnings Remain The Same Over The Time Period Lock-Up?
+## Will My subDAO Earnings Remain The Same Over The Time Period Lock-Up?
 
 No, they are calculated and paid to the lock-up position per epoch - daily. They may increase when:
 
