--- a/docs/governance/hip.mdx
+++ b/docs/governance/hip.mdx
@@ -89,6 +89,8 @@ additional subject matter experts.
    the provided markdown template. The template can be adapted to suit the information required to
    illustrate an idea.
 
+<!-- TODO: stylize indent blocks -->
+
 - Author is ready to draft a HIP.
 - Author seeks out the HIP Template in HIP 7 (also located in the Discussion tab of the HIP
   Repository).
