--- a/docs/governance/phase-3.mdx
+++ b/docs/governance/phase-3.mdx
@@ -2,7 +2,7 @@
 id: phase-3
 title: Phases of Helium Governance
 pagination_label: Phases of Helium Governance
-sidebar_label: Phase 3
+sidebar_label: Phase 3 Realms on Solana
 description: Helium Documentation
 image: https://docs.helium.com/img/link-image.png
 slug: /governance/phase-3
@@ -26,8 +26,12 @@ tokens and casting votes on proposed changes and decisions.
 You can view past and current proposals on Realms by navigating to either the Helium Network or
 subNetworks at:
 
-Helium (HNT): realms.heliumvote.com/dao/hnt IoT subNetwork (IOT): realms.heliumvote.com/dao/iot
-Mobile subNetwork (MOBILE): realms.heliumvote.com/dao/mobile
+<!-- TODO: three column button for realms links -->
+
+- Helium (HNT): [realms.heliumvote.com/dao/hnt](https://www.realms.heliumvote.com/dao/hnt)
+- IoT subNetwork (IOT): [realms.heliumvote.com/dao/iot](https://www.realms.heliumvote.com/dao/iot)
+- Mobile subNetwork (MOBILE):
+  [realms.heliumvote.com/dao/mobile](https://www.realms.heliumvote.com/dao/mobile)
 
 You’ll also always find the in progress and final statuses in the Helium HIP Repository at:
 www.github.com/helium/hip.
@@ -51,14 +55,25 @@ spl-governance contracts.
 
 You can view the Helium governance contracts on Solana here:
 
-Contract for delegation of tokens to subNetworks for rewards
+<!-- TODO: make headings purple -->
+
+#### Contract for delegation of tokens to subNetworks for rewards
+
+```
 hdaoVTCqhfHHo75XdAMxBKdUqvq1i5bF23sisBqVgGR
+```
 
-Default spl-governance contract to govern our own contracts and council
+#### Default spl-governance contract to govern our own contracts and council
+
+```
 hgovkRU6Ghe1Qoyb54HdSLdqN7VtxaifBzRmh9jtd3S
+```
 
-Contract for governance to create Helium-specific voting power rules
+#### Contract for governance to create Helium-specific voting power rules
+
+```
 hvsrNC3NKbcryqDs2DocYHZ9yPKEVzdSjQG6RVtK1s8
+```
 
 ### How do I vote?
 
@@ -88,7 +103,7 @@ steps that may require the signing of a transaction are noted as such:**
 
 1. Establish an account on a Solana-compatible wallet. The Helium Wallet is a recommended choice
    built for Helium users specifically, but any Solana-compatible wallet will perform all the
-   functions you need.\*\*
+   functions you need.
 2. Acquire tokens by providing coverage for the network or through a liquidity provider in the
    Solana Ecosystem. The tokens you have depend on the network you are providing coverage for or the
    Network or subNetworks you wish to participate in the governance of (HNT, IOT, or MOBILE).
@@ -100,18 +115,18 @@ steps that may require the signing of a transaction are noted as such:**
 7. Select “Lock Tokens”. This is how you stake tokens for voting power.
 8. Follow the on-screen instructions to “Lock” your tokens. You can lock as little as one token or
    as many as you have.
-9. You can choose up to 4 years to lock or as little as six months
+9. You can choose up to 4 years to lock or as little as six months.
 10. You will need to choose “Decaying” or “Constant”
-11. Decaying means the lockup period begins to countdown immediately
+11. Decaying means the lockup period begins to countdown immediately.
 12. Constant means the lockup period will remain until the user decides to start the countdown.
 13. Select “Lock Tokens” to complete the action. _Requires signing a transaction _
 14. Locate an active proposal.
-15. Cast your vote with options “Yes” or “No” _Requires signing a transaction_
+15. Cast your vote with options “Yes” or “No”. _Requires signing a transaction_
 
 A step-by-step user guide to staking on Realms can be found in Helium Docs:
-docs.helium.com/governance/realms
+[here](/governance/realms)
 
-View the index of past HIP decisions on Github:
-https://github.com/helium/HIP#helium-improvement-proposals-hip
+View the index of past HIP decisions on Github
+[here](https://github.com/helium/HIP#helium-improvement-proposals-hip)
 
-View the index of implemented HIPs on Docs: https://docs.helium.com/hip#implemented-hips
+View the index of implemented HIPs on Docs [here](https://docs.helium.com/hip#implemented-hips)
