--- a/docs/governance/voting.mdx
+++ b/docs/governance/voting.mdx
@@ -19,7 +19,7 @@ Draft, In Discussion, Approved, Deployed, or Rejected.
 
 Read the HIP 7 Process here: https://github.com/helium/HIP/blob/main/0007-managing-hip-process.md
 
-## Blockchains + On-Chain Voting,
+## Blockchains + On-Chain Voting
 
 The Helium Network, uses on-chain voting to maximize inclusive participation and maintain a publicly
 auditable voting record. On-chain voting means storing a piece of data on a Blockchain. The
@@ -61,8 +61,12 @@ retain the tokens' economic value and utility, while the veToken assumes the vot
 Helium veTokens are non-transferable, ‘soulbound,’ and have zero intrinsic economic value. They are
 represented by an NFT in your Helium Wallet App.
 
-Visit Realms, the Helium Network, and subNetworks at: realms.heliumvote.com/dao/hnt
-realms.heliumvote.com/dao/iot realms.heliumvote.com/dao/mobile
+Visit Realms, the Helium Network, and subNetworks at:
+
+- Helium (HNT): [realms.heliumvote.com/dao/hnt](https://www.realms.heliumvote.com/dao/hnt)
+- IoT subNetwork (IOT): [realms.heliumvote.com/dao/iot](https://www.realms.heliumvote.com/dao/iot)
+- Mobile subNetwork (MOBILE):
+  [realms.heliumvote.com/dao/mobile](https://www.realms.heliumvote.com/dao/mobile)
 
 ## Staking
 
@@ -76,9 +80,7 @@ lockup. In the Helium Network and subNetworks, users can stake tokens for up to 
 allows users to make a commitment to the future, creating long-term alignment to increase the value
 of the Network.
 
-::: note
-
-How to stake tokens
+:::note How to stake tokens
 
 For a full walkthrough on how to stake your tokens to the Helium Network or one of its subNetworks,
 see the [Realms Staking][voting-power] guide.
@@ -155,4 +157,4 @@ did not reach quorum and therefore is invalidated.
 [realms-iot]: https://realms.heliumvote.com/dao/iot
 [realms-mobile]: https://realms.heliumvote.com/dao/mobile
 [delegate]: /vote-escrow/realms#delegating-stakes
-[voting-power]: /vote-escrow/voting-power
+[voting-power]: /governance/faq
