--- a/docs/governance/governance.mdx
+++ b/docs/governance/governance.mdx
@@ -46,61 +46,63 @@ led by the open-source community that continues to build it.
 
 ## Terms
 
-- Wallet - A digital application designed for interacting with blockchain-based applications.
+- **Wallet** - A digital application designed for interacting with blockchain-based applications.
   Wallets enable users to store and manage their digital assets, such as digital tokens and NFTs.
-- Blockchain - A shared, immutable ledger that facilitates the process of recording transactions and
-  tracking assets in a business network. An asset can be tangible (a house, car, cash, land) or
+- **Blockchain** - A shared, immutable ledger that facilitates the process of recording transactions
+  and tracking assets in a business network. An asset can be tangible (a house, car, cash, land) or
   intangible (intellectual property, patents, copyrights, branding). Virtually anything of value can
-  be tracked and traded on a blockchain network, reducing risk and cutting costs for all involved
-  (IBM).
-- Solana - A blockchain that uses a proof-of-stake (PoS) mechanism to provide smart contract
-  functionality as well as a mechanism called proof-of-history (PoH), which uses hashed timestamps
+  be tracked and traded on a blockchain network, reducing risk and cutting costs for all
+  involved.[^1]
+- **Solana** - A blockchain that uses a proof-of-stake ("PoS") mechanism to provide smart contract
+  functionality as well as a mechanism called proof-of-history ("PoH"), which uses hashed timestamps
   to verify when transactions occur.
-- Token - Tokens are digital assets that utilize cryptography for secure transactions, represent
+- **Token** - Tokens are digital assets that utilize cryptography for secure transactions, represent
   value, and can be used for various purposes within a decentralized network or ecosystem.
-- Non-Fungible Token (NFT) - A unique digital identifier that is recorded on a blockchain and is
-  used to certify ownership and authenticity. It cannot be copied, substituted, or subdivided.
-- Consensus Protocols – A set of rules that define the instructions for how to be an autonomous
+- **Non-Fungible Token ("NFT")** - A unique digital identifier that is recorded on a blockchain and
+  is used to certify ownership and authenticity. It cannot be copied, substituted, or subdivided.
+- **Consensus Protocols** – A set of rules that define the instructions for how to be an autonomous
   participant in a distributed computer network and come to an agreement about the exact state of
   common data.
-- Node - Refers to individual devices or computers that participate in maintaining the network by
-  storing a copy of the blockchain, validating transactions, and relaying information to achieve
+- **Node** - Refers to individual devices or computers that participate in maintaining the network
+  by storing a copy of the blockchain, validating transactions, and relaying information to achieve
   consensus.
-- Validators - A distributed network actor responsible for verifying and validating transactions and
-  blocks, maintaining the network's security and consensus.
-- Proof-of-Stake (PoS) - A PoS system is a type of blockchain consensus protocol that achieves
+- **Validators** - A distributed network actor responsible for verifying and validating transactions
+  and blocks, maintaining the network's security and consensus.
+- **Proof-of-Stake ("PoS")** - A PoS system is a type of blockchain consensus protocol that achieves
   verification by selecting validators in proportion to their quantity of holdings in the associated
   cryptocurrency.
-- Proof-of-History (PoH) - A consensus protocol unique to Solana, Proof-of-History is a verifiable
-  and sequential timestamping mechanism that provides a trustless and efficient ordering of events
-  in the blockchain.
-- Helium - A global decentralized wireless network of networks utilizing a token-incentive model.
-- Helium Improvement Proposals (HIP) - A bill for changes to the network.
-- Discord - A web-based community chat platform.
-- GitHub - A web-based platform that allows developers to collaborate, manage, and store their code
-  repositories.
-- Repository - A storage location that contains all the files, documentation, and version history of
-  a project.
-- Realms - A platform for decentralized projects to manage token-based governance operations and
+- **Proof-of-History ("PoH")** - A consensus protocol unique to Solana, Proof-of-History is a
+  verifiable and sequential timestamping mechanism that provides a trustless and efficient ordering
+  of events in the blockchain.
+- **Helium** - A global decentralized wireless network of networks utilizing a token-incentive
+  model.
+- **Helium Improvement Proposals ("HIP")** - A bill for changes to the network.
+- **Discord** - A web-based community chat platform.
+- **GitHub** - A web-based platform that allows developers to collaborate, manage, and store their
+  code repositories.
+- **Repository** - A storage location that contains all the files, documentation, and version
+  history of a project.
+- **Realms** - A platform for decentralized projects to manage token-based governance operations and
   manage token-based governance operations.
-- Helium Network Token (HNT) - The native token of the Helium Network, used for incentivizing and
-  securing the decentralized wireless network of networks through redemption and swap features.
-- IOT subNetwork Token (IOT) - A token specific to the LoRaWAN Network, used for incentivizing and
-  securing the decentralized wireless network for IoT devices.
-- MOBILE subNetwork (MOBILE) - A token specific for the 5G CBRS Network, used for incentivizing and
-  securing the decentralized wireless network for Cellular/Mobile devices.
-- Staking (or “Lock Up”) - The act of temporarily locking up tokens as collateral to participate in
-  block validation and consensus mechanisms, earning rewards for supporting network operations or
+- **Helium Network Token ("HNT")** - The native token of the Helium Network, used for incentivizing
+  and securing the decentralized wireless network of networks through redemption and swap features.
+- **IOT subNetwork Token ("IOT")** - A token specific to the LoRaWAN Network, used for incentivizing
+  and securing the decentralized wireless network for IoT devices.
+- **MOBILE subNetwork ("MOBILE")** - A token specific for the 5G CBRS Network, used for
+  incentivizing and securing the decentralized wireless network for Cellular/Mobile devices.
+- **Staking (or “Lock Up”)** - The act of temporarily locking up tokens as collateral to participate
+  in block validation and consensus mechanisms, earning rewards for supporting network operations or
   generating Voting Power.
-- Voting Power - 100 veHNT is more than ten veHNT. The higher amount would mean you have more weight
-  in deciding vote outcomes. The more HNT you stake for veHNT, the more voting power you have.
-- Vote Escrowed ("ve") - A position created by staking your tokens that only functions for Network
-  or subNetwork voting. Vote Escrowed positions show up in wallets as NFTs and are
+- **Voting Power** - 100 veHNT is more than ten veHNT. The higher amount would mean you have more
+  weight in deciding vote outcomes. The more HNT you stake for veHNT, the more voting power you
+  have.
+- **Vote Escrowed ("ve")** - A position created by staking your tokens that only functions for
+  Network or subNetwork voting. Vote Escrowed positions show up in wallets as NFTs and are
   non-transferrable.
-- veHNT - A position created by staking your HNT. Used for voting on proposals that affect the
+- **veHNT** - A position created by staking your HNT. Used for voting on proposals that affect the
   entire Helium Network of Networks model.
-- veIOT - A position created by staking your IOT. Used for IOT Network governance.
-- veMOBILE - A position created by staking your MOBILE. Used for MOBILE Network governance.
+- **veIOT** - A position created by staking your IOT. Used for IOT Network governance.
+- **veMOBILE** - A position created by staking your MOBILE. Used for MOBILE Network governance.
 
 ---
 
@@ -120,9 +122,9 @@ contains a record of past voting. These votes reflect the community's decision-m
 provide insight into the evolution of the network. The next part of this document will explain the
 evolution of voting and how you can view past voting history:
 
-1. [Voting in Discord by raising hands](governance/phase-1)
-2. [Helium Vote on-chain voting on the Helium L1](governance/phase-2)
-3. [Realms on Solana](governance/phase-3)
+- Phase 1: [Voting in Discord by raising hands](governance/phase-1)
+- Phase 2: [Helium Vote on-chain voting on the Helium L1](governance/phase-2)
+- Phase 3: [Realms on Solana](governance/phase-3)
 
 ---
 
@@ -132,17 +134,19 @@ Ready to participate? Join the global decentralized wireless network and partici
 Governance, including specific HIPs, voting procedures, and Working Groups. Refer to the provided
 links and resources.
 
-1. Discord: The Helium Discord platform serves as the primary communication channel for the Helium
-   Network Community. It offers real-time discussions, support, and engagement opportunities.
-2. GitHub Repository: The HIP GitHub repository provides access to the Helium Improvement Proposals
-   and related discussions.
-3. Social Media and Ecosystem Voices: The Helium Foundation and various influencers on platforms
+<!-- TODO: use sol docs buttons https://docs.solana.com/developers -->
+
+1. **Discord**: The Helium Discord platform serves as the primary communication channel for the
+   Helium Network Community. It offers real-time discussions, support, and engagement opportunities.
+2. **GitHub Repository**: The HIP GitHub repository provides access to the Helium Improvement
+   Proposals and related discussions.
+3. **Social Media and Ecosystem Voices**: The Helium Foundation and various influencers on platforms
    like Twitter, Discord, and YouTube provide updates, debates, and explanations of HIPs and
    governance-related matters.
-4. Monthly Community Calls: The Helium Community holds monthly video calls (led by the Helium
+4. **Monthly Community Calls**: The Helium Community holds monthly video calls (led by the Helium
    Foundation). These typically happen on the 4th Wednesday of each month at Noon ET. Each call has
    an open agenda, and any community member can join and add items to the agenda to be discussed.
-5. Community Calendar: The Helium Foundation maintains a calendar of ecosystem events and
+5. **Community Calendar**: The Helium Foundation maintains a calendar of ecosystem events and
    happenings. You can access and subscribe to this at:
    [www.helium.foundation/community-calendar][community-calendar].
 
@@ -175,3 +179,5 @@ a ticket in the Helium [Docs Repo][docs-issues].
 [realms]: /governance/realms
 [bip]: https://github.com/bitcoin/bips
 [community-calendar]: https://www.helium.foundation/community-calendar
+
+[^1]: https://www.ibm.com/topics/blockchain
