--- a/docs/governance/phase-1.mdx
+++ b/docs/governance/phase-1.mdx
@@ -2,7 +2,7 @@
 id: phase-1
 title: Phases of Helium Governance
 pagination_label: Phases of Helium Governance
-sidebar_label: Phase 1
+sidebar_label: Phase 1 Voting in Discord
 description: Helium Documentation
 image: https://docs.helium.com/img/link-image.png
 slug: /governance/phase-1
