--- a/docs/governance/phase-2.mdx
+++ b/docs/governance/phase-2.mdx
@@ -2,7 +2,7 @@
 id: phase-2
 title: Phases of Helium Governance
 pagination_label: Phases of Helium Governance
-sidebar_label: Phase 2
+sidebar_label: Phase 2 Helium Vote
 description: Helium Documentation
 image: https://docs.helium.com/img/link-image.png
 slug: /governance/phase-2
