--- a/docs/use-the-network/devices/ready-to-use/comtac/lpn-km.mdx
+++ b/docs/use-the-network/devices/ready-to-use/comtac/lpn-km.mdx
@@ -21,7 +21,8 @@ messages from transformer stations.
 
 ### Resources
 
-- [Product Page](https://www.comtac.ch/en/products/lora/condition-monitoring/lpn-km-short-circuit-monitor.html)
+- [Product Page](https://www.comtac.ch/en/produkte/lora/cluey/index.html#KM)
+- [Datasheet](https://www.comtac.ch/cms/upload/downloads/dokumente/C-FS-Cluey_KM_220613_EN.pdf)
 
 ### Specifications
 
