--- a/docs/use-the-network/devices/ready-to-use/comtac/lpn-km.mdx
+++ b/docs/use-the-network/devices/ready-to-use/comtac/lpn-km.mdx
@@ -1,20 +1,20 @@
 ---
-id: lpn-km
-title: LPN KM - Short-Circuit Monitor
-pagination_label: LPN KM - Short-Circuit Monitor
-sidebar_label: LPN KM - Short-Circuit Monitor
+id: cluey-km
+title: Cluey KM - Short-Circuit Monitor
+pagination_label: Cluey KM - Short-Circuit Monitor
+sidebar_label: Cluey KM - Short-Circuit Monitor
 description:
-  LPN KM is specially designed for the acquisition and transmission of short-circuit and ground
+  Cluey KM is specially designed for the acquisition and transmission of short-circuit and ground
   fault messages from transformer stations.
 image: img/use-the-network/devices/ready-to-use/comtac/lpn-km-foto.jpg
-slug: /use-the-network/devices/ready-to-use/comtac/lpn-km
+slug: /use-the-network/devices/ready-to-use/comtac/cluey-km
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
 
-## LPN KM - Short-circuit monitor
+## Cluey KM - Short-circuit Monitor
 
-LPN KM is specially designed for the acquisition and transmission of short-circuit and ground fault
+Cluey KM is specially designed for the acquisition and transmission of short-circuit and ground fault
 messages from transformer stations.
 
 <img src={useBaseUrl('img/use-the-network/devices/ready-to-use/comtac/lpn-km-foto.jpg')} />
