--- a/docs/use-the-network/devices/ready-to-use/comtac/lpn-tsm.mdx
+++ b/docs/use-the-network/devices/ready-to-use/comtac/lpn-tsm.mdx
@@ -1,8 +1,8 @@
 ---
 id: lpn-tsm
-title: LPN TSM Transformer Station Monitor
-pagination_label: LPN TSM Transformer Station Monitor
-sidebar_label: LPN TSM Transformer Station Monitor
+title: LPN TSM - Transformer Station Monitor
+pagination_label: LPN TSM - Transformer Station Monitor
+sidebar_label: LPN TSM - Transformer Station Monitor
 description: Transmission Of Operating Status And Error Messages From Transformer Stations
 image: img/use-the-network/devices/ready-to-use/comtac/lpn-tsm-foto.jpg
 slug: /use-the-network/devices/ready-to-use/comtac/lpn-tsm
@@ -10,15 +10,16 @@ slug: /use-the-network/devices/ready-to-use/comtac/lpn-tsm
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
 
-## LPN TSM Transformer Transformer station monitor
+## LPN TSM - Transformer Station Monitor
 
-Transmission of operating status and error messages from transformer stations
+Transmission of operating status and error messages from transformer stations.
 
 <img src={useBaseUrl('img/use-the-network/devices/ready-to-use/comtac/lpn-tsm-foto.jpg')} />
 
 ### Resources
 
 - [Product Page](https://www.comtac.ch/en/products/lora/condition-monitoring/lpn-tsm-tranformer-station-monitor.html)
+- [Datasheet](https://www.comtac.ch/cms/upload/produktdokumentation/TSM_NTN_E1398/TSM_Datasheet_[EN_V00.20]_E1398.pdf)
 
 ### Specifications
 
