--- a/docs/use-the-network/devices/ready-to-use/decentlab/dl-iam.mdx
+++ b/docs/use-the-network/devices/ready-to-use/decentlab/dl-iam.mdx
@@ -1,9 +1,9 @@
 ---
 id: dl-iam
-title: Dl-Iam
-pagination_label: Dl Iam
-sidebar_label: Dl-Iam
-description: Indoor Ambiance Monitor Including Co2, Tvoc And Motion Sensor For LoRaWAN
+title: DL-IAM
+pagination_label: DL-IAM
+sidebar_label: DL-IAM
+description: Indoor Ambiance Monitor Including Co2, TVOC And Motion Sensor For LoRaWAN
 image: img/use-the-network/devices/ready-to-use/decentlab/dl-iam.jpg
 slug: /use-the-network/devices/ready-to-use/decentlab/dl-iam
 ---
@@ -12,7 +12,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 ## DL-IAM
 
-Indoor Ambiance Monitor including CO2, TVOC and Motion Sensor for LoRaWAN
+Indoor Ambiance Monitor including CO2, TVOC and Motion Sensor for LoRaWAN.
 
 <img src={useBaseUrl('img/use-the-network/devices/ready-to-use/decentlab/dl-iam.jpg')} />
 
@@ -25,28 +25,28 @@ Indoor Ambiance Monitor including CO2, TVOC and Motion Sensor for LoRaWAN
 
 #### Sensors:
 
-- co2
-- tvoc
+- CO2
+- TVOC
 - temperature
 - humidity
 - barometer
-- light
-- pir
+- ambient light
+- PIR motion
 - battery
 
 #### Dimensions:
 
 - width: 120 mm
 - length: 80 mm
-- height: 25 mm
+- height: 27 mm
 
 #### Weight:
 
-- 144 grams
+- 144 grams (including batteries)
 
 #### Battery:
 
-- type: 2 AA alkaline
+- type: 2x AA alkaline (LR6)
 - replaceable: True
 
 ---
