--- a/docs/use-the-network/devices/ready-to-use/decentlab/dl-pr26.mdx
+++ b/docs/use-the-network/devices/ready-to-use/decentlab/dl-pr26.mdx
@@ -1,8 +1,8 @@
 ---
 id: dl-pr26
-title: Dl-Pr26
-pagination_label: Dl Pr26
-sidebar_label: Dl-Pr26
+title: DL-PR26
+pagination_label: DL-PR26
+sidebar_label: DL-PR26
 description: Pressure / Liquid Level And Temperature Sensor For LoRaWAN
 image: img/use-the-network/devices/ready-to-use/decentlab/dl-pr26.jpg
 slug: /use-the-network/devices/ready-to-use/decentlab/dl-pr26
@@ -12,7 +12,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 ## DL-PR26
 
-Pressure / Liquid Level and Temperature Sensor for LoRaWAN
+Pressure / Liquid Level and Temperature Sensor for LoRaWAN.
 
 <img src={useBaseUrl('img/use-the-network/devices/ready-to-use/decentlab/dl-pr26.jpg')} />
 
@@ -37,11 +37,11 @@ Pressure / Liquid Level and Temperature Sensor for LoRaWAN
 
 #### Weight:
 
-- 840 grams
+- 840 grams (including batteries and sensor)
 
 #### Battery:
 
-- type: 2 C alkaline
+- type: 2x C alkaline (LR14)
 - replaceable: True
 
 ---
