--- a/docs/use-the-network/setup-a-packet-forwarder.mdx
+++ b/docs/use-the-network/setup-a-packet-forwarder.mdx
@@ -14,7 +14,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 :::warning
 
-The ability to earn from [Proof-of-Coverage](/blockchain/proof-of-coverage) with anything other than
+The ability to earn from [Proof of Coverage](/blockchain/proof-of-coverage) with anything other than
 a [Full Hotspot](/hotspot-makers/iot/full-hotspots) is not supported.
 
 Building your own packet forwarder enables Data transfer rewards _only_, **if and only if** you
@@ -26,19 +26,19 @@ complete the setup process [here](/hotspot-makers/iot/data-only-hotspots).
 
 <img src={useBaseUrl('img/use-the-network/setup-a-packet-forwarder/packet-forwarder-arch.png')} />
 
-To be a Helium HotSpot, there are three principal components to know about:
+To be a Helium Hotspot, there are three principal components to know about:
 
 - **Packet Forwarder**: this is a utility that interacts with the radio front-end and sends and
   receives raw radio packets with the Helium Miner.
-- **Hotspot Client**: the Helium blockchain comes into the picture here; the hotspot client
-  is responsible for routing packets to the appropriate Router (see our Routing article) entering
-  into microtransactions brokered via gRPC.
-- **Router**: a Helium compatible LoRaWAN Network Server (LNS); this component is interested in
+- **Hotspot Client**: the Helium blockchain comes into the picture here; the hotspot client is
+  responsible for routing packets to the appropriate Router entering into microtransactions brokered
+  via gRPC.
+- **Router**: a Helium compatible LoRaWAN Network Server ("LNS"); this component is interested in
   receiving the packets relating to its devices and handles downlink responses when appropriate.
 
 Any device that can run an 8 channel LoRa front-end (such as SX1301 or SX1302) can be used to
-participate in the Helium Network. The Hotspot Client is designed to send and receive packets
-using the Semtech GateWay Messaging Protocol (GWMP), making it compatible with almost every LoRaWAN
+participate in the Helium Network. The Hotspot Client is designed to send and receive packets using
+the Semtech GateWay Messaging Protocol (GWMP), making it compatible with almost every LoRaWAN
 Gateway on the Market.
 
 Many off-the-shelf LoRaWAN Gateways work very well and using one of them gives you one less thing to
@@ -67,7 +67,7 @@ Gateway itself; it's easy to run
 If you choose to run the Hotspot elsewhere, it's possible to downgrade all the way to a Pi0, for
 example, since you will only be running the Packet Forwarder on the Gateway.
 
-RAK Wireless sells multiple "PiHATs" that provide the 8-channel front-end:
+RAK Wireless sells multiple "PiHats" that provide the 8-channel front-end:
 
 - [the RAK2287 (SX1302)](https://store.rakwireless.com/products/rak2287-pi-hat)
 
@@ -75,7 +75,7 @@ Or you can check out their
 [WisGate Developer](https://store.rakwireless.com/collections/wisgate-developer) line where they
 provide bundles:
 
-- the D4H/D4H+/D4HP are all based off of the RAK2287
+- the D4H/D4H+/D4HP are all based on the RAK2287
 
 Ultimately, which configuration works for you depends on your situation, but all of them will work
 with this guide with little adjustment.
@@ -118,39 +118,41 @@ Forwarder application.
 
 Pull down Helium's fork of the SX1302 Packet Forwarder:
 
-`git clone https://github.com/helium/sx1302_hal.git`
+```bash
+$ git clone https://github.com/helium/sx1302_hal.git
+```
 
 Go into the directory and build:
 
-```
+```bash
 $ cd sx1302_hal
 $ make
 ```
 
 Next, go into the the packet_forwarder directory, where we will create a link to the reset script:
 
-```
+```bash
 $ cd packet_forwarder
 $ ln -s ../tools/reset_lgw.sh reset_lgw.sh
 ```
 
 We will also create a link to the appropriate regional configuration. For example:
 
-```
-ln -s global_conf.json.sx1250.US915 global_conf.json
+```bash
+$ ln -s global_conf.json.sx1250.US915 global_conf.json
 ```
 
 We are now ready to test the start-up. From `~/sx1302_hal/packet_forwarder` try:
 
-```
-./lora_pkt_fwd
+```bash
+$ ./lora_pkt_fwd
 ```
 
 If you get the following output, you are good to go:
 
-```
+```bash
 INFO: [main] concentrator started, packet can now be received
 INFO: concentrator EUI: 0x????????????????
 ```
 
-You are now ready to setup the [Hotspot client](/hotspot-makers/iot/light-hotspots).
+You are now ready to set up the [Hotspot client](/hotspot-makers/iot/light-hotspots).
