--- a/docs/network-iot/open-lns.mdx
+++ b/docs/network-iot/open-lns.mdx
@@ -1,22 +1,22 @@
 ---
 id: open-lns
-title: Open LNS Overview
-pagination_label: Open LNS
-sidebar_label: Open LNS
-description: Helium Open LNS Documentation
+title: OpenLNS Overview
+pagination_label: OpenLNS
+sidebar_label: OpenLNS
+description: Helium OpenLNS Documentation
 image: https://docs.helium.com/img/link-image.png
 slug: /iot/open-lns
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
 
-The Open LNS Initiative allows anyone looking to deploy devices on the Helium Network to use any
+The OpenLNS Initiative allows anyone looking to deploy devices on the Helium Network to use any
 LoRaWAN Network Server (LNS). The LNS you choose must comply with the LoRaWAN specification to
 access the Helium Network.
 
-## Why Open LNS?
+## Why OpenLNS?
 
-Open LNS will deliver the following Network improvements:
+OpenLNS will deliver the following Network improvements:
 
 1. Increased accessibility
 2. Accelerated device joins and a focus on increased speed
@@ -27,11 +27,11 @@ Open LNS will deliver the following Network improvements:
 
 ## Console & LNS Migration
 
-The Open LNS Initiative is unaffected by the migration to Solana. LNS Operators and Console Users
+The OpenLNS Initiative is unaffected by the migration to Solana. LNS Operators and Console Users
 will have months to migrate their LNS services.
 
-Open LNS allows devices on the Helium Network to use any LoRaWAN Network Server (LNS) that
-complies with the LoRaWAN specification.
+OpenLNS allows devices on the Helium Network to use any LoRaWAN Network Server (LNS) that complies
+with the LoRaWAN specification.
 
 <!-- TODO: what is an LNS -->
 <!-- - The LoRaWAN Network Server is the brain and the controller of a LoRaWAN network. -->
@@ -41,27 +41,27 @@ complies with the LoRaWAN specification.
 
 ## Network Improvements
 
-Before Open LNS, Helium LoRaWAN Network Servers ran on bespoke software especially suited to the
-Helium blockchain. Through [HIP-70](https://github.com/helium/HIP/issues/471), these constraints were removed, allowing for a multitude
-of simplifications and improvements.
+Before OpenLNS, Helium LoRaWAN Network Servers ran on bespoke software especially suited to the
+Helium blockchain. Through [HIP-70](https://github.com/helium/HIP/issues/471), these constraints
+were removed, allowing for a multitude of simplifications and improvements.
 
-**Increased Accessibility:** <br/> Open LNS alleviates the usage and access bottlenecks that stem
+**Increased Accessibility:** <br/> OpenLNS alleviates the usage and access bottlenecks that stem
 from "Helium Console" as the only LNS option and instead scales Network access through a large and
 diverse set of LNS providers and software suites.
 
-**Accelerated Device Joins:** <br/> The re-engineered back-end architecture removes the need to store
-device routing information on the Helium blockchain, dramatically reducing device join time.
+**Accelerated Device Joins:** <br/> The re-engineered back-end architecture removes the need to
+store device routing information on the Helium blockchain, dramatically reducing device join time.
 
 **Increased Reliability:** <br/> By collocating in the same global regions as deployed Hotspots,
 additional Oracles can support future demand, reduce latency, and increase redundancy.
 
 **Enable Massive Scalability:** <br/> The upgraded architecture allows for new device classes and
-innovative use cases, with new LoRaWAN infrastructure allowing IoT solution providers to utilize whichever
-LNS they prefer based on features and capabilities.
+innovative use cases, with new LoRaWAN infrastructure allowing IoT solution providers to utilize
+whichever LNS they prefer based on features and capabilities.
 
 ---
 
-## Open LNS FAQ
+## OpenLNS FAQ
 
 ### Why Are These Changes Necessary?
 
@@ -82,15 +82,15 @@ underlying Network.
   <figcaption>Simplified block diagram of Data Transfer Accounting.</figcaption>
 </figure>
 
-### How Would Open LNS Provide More Access To The Network?
+### How Would OpenLNS Provide More Access To The Network?
 
-Open LNS allows partners in the Ecosystem to use any LNS that complies with the LoRaWAN
-specification to access the Helium Network.
+OpenLNS allows partners in the Ecosystem to use any LNS that complies with the LoRaWAN specification
+to access the Helium Network.
 
 :::note New Capabilities.
 
-The Helium Console does not support standard LoRaWAN features such as ABP activation or Class C
-end devices. Open LNS allows users to choose a different LNS, such as ChirpStack to address these
+The Helium Console does not support standard LoRaWAN features such as ABP activation or Class C end
+devices. OpenLNS allows users to choose a different LNS, such as ChirpStack to address these
 limitations.
 
 :::
@@ -105,9 +105,9 @@ evidence that ABP and Class C end devices will be fully functional on the Helium
 
 Testing will continue through the start of 2023.
 
-### Which Open LNS Providers Can I Use?
+### Which OpenLNS Providers Can I Use?
 
-The first batch of providers within the Open LNS Initiative utilizes [ChirpStack][ChirpStack] and
+The first batch of providers within the OpenLNS Initiative utilizes [ChirpStack][ChirpStack] and
 offers multi-tenant and private instances to businesses and individuals.
 
 - [IngeniousThings][ingeniousthings] provides LNS services, including public device hosting using a
@@ -118,9 +118,9 @@ offers multi-tenant and private instances to businesses and individuals.
   Helium users.
 - [Parley Labs][parley-labs] provides Helium products and services and supports growth. Parley Labs
   plans to offer both public and private LNS hosting services. Parley Labs was a pioneer in the
-  Helium Ecosystem, providing pre-provisioned products, demonstrating Class C end device functionality,
-  and assisting clients in bringing their solutions to market. Parley Labs' services include
-  sourcing, procurement, provisioning, logistics, integrations, and engineering.
+  Helium Ecosystem, providing pre-provisioned products, demonstrating Class C end device
+  functionality, and assisting clients in bringing their solutions to market. Parley Labs' services
+  include sourcing, procurement, provisioning, logistics, integrations, and engineering.
 - [Brdot][brdot] emerged in 2021 as the ultimate solution provider for Helium across Latin America
   and has since then been offering comprehensive services and coverage as a reseller for the finest
   Helium gateways available, certified by Anatel. Our expertise brings users an extensive range of
