openlns one word, line wraps, json formatting

--- a/docs/network-iot/open-lns-getting-started.mdx
+++ b/docs/network-iot/open-lns-getting-started.mdx
@@ -1,9 +1,9 @@
 ---
 id: open-lns-quickstart
-title: Getting started with Open LNS
+title: Getting Started with OpenLNS
 pagination_label: Run an LNS
 sidebar_label: Run an LNS
-description: Helium Open LNS Documentation
+description: Helium OpenLNS Documentation
 image: https://docs.helium.com/img/link-image.png
 slug: /iot/open-lns-quickstart
 ---
@@ -55,8 +55,8 @@ You should find a file called keypair.bin. Print out the public key of your key 
 
 ### Initialize CLI
 
-CLI can be initialized with environment variables, so common variables don't have to be reiterated in
-subsequent commands.
+CLI can be initialized with environment variables, so common variables don't have to be reiterated
+in subsequent commands.
 
 ```
 ./helium-config-service-cli env init
@@ -91,10 +91,10 @@ seeing your own assigned OUI, max_copies, and other environment variables.
   "net_id": "C00053",
   "oui": 3,
   "server": {
-    "host" : "",
+    "host": "",
     "port": 0,
     "protocol": {
-      "type" : "packet_router"
+      "type": "packet_router"
     }
   },
   "max copies": 15,
