--- a/docs/use-the-network/setup-a-packet-forwarder.mdx
+++ b/docs/use-the-network/setup-a-packet-forwarder.mdx
@@ -15,9 +15,9 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 :::warning
 
 The ability to earn from [Proof of Coverage](/blockchain/proof-of-coverage) with anything other than
-an [Full Hotspot](/hotspot-makers/iot/full-hotspots) is not supported.
+a [Full Hotspot](/hotspot-makers/iot/full-hotspots) is not supported.
 
-Building your own packet forwarder enables data transfer rewards _only_, **if and only if** you
+Building your own packet forwarder enables Data transfer rewards _only_, **if and only if** you
 complete the setup process [here](/hotspot-makers/iot/data-only-hotspots).
 
 :::
@@ -26,32 +26,32 @@ complete the setup process [here](/hotspot-makers/iot/data-only-hotspots).
 
 <img src={useBaseUrl('img/use-the-network/setup-a-packet-forwarder/packet-forwarder-arch.png')} />
 
-To be a Helium Miner, there are three principle components to know about
+To be a Helium Hotspot, there are three principal components to know about:
 
 - **Packet Forwarder**: this is a utility that interacts with the radio front-end and sends and
-  receives raw radio packets with the Helium Miner
-- **Light Hotspot Client**: the Helium Blockchain comes into the picture here; light hotspot client
-  is responsible for routing packets to the appropriate Router (see our Routing article) entering
-  into microtransactions brokered via gRPC
-- **Router**: a Helium compatible LoRaWAN Network Server, basically; this component is interested in
-  receiving the packets relating to its devices and handles downlink responses when appropriate
+  receives raw radio packets with the Helium Miner.
+- **Hotspot Client**: the Helium blockchain comes into the picture here; the hotspot client is
+  responsible for routing packets to the appropriate Router entering into microtransactions brokered
+  via gRPC.
+- **Router**: a Helium compatible LoRaWAN Network Server ("LNS"); this component is interested in
+  receiving the packets relating to its devices and handles downlink responses when appropriate.
 
 Any device that can run an 8 channel LoRa front-end (such as SX1301 or SX1302) can be used to
-participate in the Helium Network. The Light Hotspot Client is designed to send and receive packets
-using the Semtech Gateways Messaging Protocol (GWMP), making it compatible with almost every LoRaWAN
+participate in the Helium Network. The Hotspot Client is designed to send and receive packets using
+the Semtech GateWay Messaging Protocol (GWMP), making it compatible with almost every LoRaWAN
 Gateway on the Market.
 
-Many off-the-shelf LoRaWAN gateways work very well and using one of them gives you one less thing to
-worry about as the Packet Forwarder is setup and ready to go.
+Many off-the-shelf LoRaWAN Gateways work very well and using one of them gives you one less thing to
+worry about as the Packet Forwarder is set up and ready to go.
 
 This guide, however, is for those that want a more hands-on experience. We will essentially be
-assembling a LoRaWAN gateway with discrete parts, loading up an open-source Linux distribution,
-compiling the packet forwarder, and running it all ourselves. In short, we'll be learning gateways
+assembling a LoRaWAN Gateway with discrete parts, loading up an open-source Linux distribution,
+compiling the Packet Forwarder, and running it all ourselves. In short, we'll be learning Gateways
 that hard way!
 
 <center>
   <i>
-    This guide is experimental and for advanced users only, and you may run in to various issues
+    This guide is experimental and for advanced users only, and you may run into various issues
     trying to get this working.
   </i>
 </center>
@@ -61,23 +61,21 @@ that hard way!
 If you don’t have your own hardware yet, we recommend using a Raspberry Pi 4B running the latest
 [64-bit RaspiOS](https://downloads.raspberrypi.org/raspios_arm64/images/) image.
 
-We recommend this configuration in particular if you are interested in running the Miner on the
-gateway itself; it's easy to run
+We recommend this configuration in particular if you are interested in running the Hotspot on the
+Gateway itself; it's easy to run
 [our Docker image from Quay](https://quay.io/repository/team-helium/miner) on a 64-bit ARM system.
-If you choose to run the Miner elsewhere, it's possible to downgrade all the way to a Pi0, for
-example, since you will only be running the packet forwarder on the gateway.
+If you choose to run the Hotspot elsewhere, it's possible to downgrade all the way to a Pi0, for
+example, since you will only be running the Packet Forwarder on the Gateway.
 
-RAK Wireless sells multiple "Pi Hats" that provide the 8-channel front-end:
+RAK Wireless sells multiple "PiHats" that provide the 8-channel front-end:
 
-- [the RAK2245 (SX1301)](https://store.rakwireless.com/products/rak2245-pi-hat?variant=22914482733156)
-- [the RAK2287 (SX1302)](https://store.rakwireless.com/collections/wislink-lpwan/products/rak2287-lpwan-gateway-concentrator-module?variant=34533841535134)
+- [the RAK2287 (SX1302)](https://store.rakwireless.com/products/rak2287-pi-hat)
 
 Or you can check out their
 [WisGate Developer](https://store.rakwireless.com/collections/wisgate-developer) line where they
 provide bundles:
 
-- the D3/D3+/D4/D4+/D4P are all based off of the RAK2245
-- the D4H is based off of the RAK2245
+- the D4H/D4H+/D4HP are all based on the RAK2287
 
 Ultimately, which configuration works for you depends on your situation, but all of them will work
 with this guide with little adjustment.
@@ -85,13 +83,13 @@ with this guide with little adjustment.
 ### Preparing the SD Card
 
 You can create an SD card from this image by looking for the recently inserted SD card in your
-system
+system.
 
 ```
 $ ls -al /dev | grep sd
 ```
 
-Generally, the timestamp is enough to indicate which device is the SD card. Next write the image to
+Generally, the timestamp is enough to indicate which device is the SD card. Next, write the image to
 the SD card. For example:
 
 ```
@@ -104,7 +102,7 @@ Once the `sync` command returns, you can eject and remove the SD card from your 
 ## Preparing RaspiOS
 
 With a keyboard, mouse, and monitor plugged in, power on the Raspberry Pi. Proceed through the
-guided RaspiOS setup where you will update your password, configure your WiFi, etc.
+guided RaspiOS setup where you will update your password, configure your Wi-Fi, etc.
 
 Enable SPI and I2C using the raspi-config tool: `sudo raspi-config`
 
@@ -113,46 +111,48 @@ good time to enable SSH if you want it.
 
 ## Installing the Semtech Packet Forwarder
 
-Depending on which SX130x radio you are running, you will want to select the appropriate packet
-forwarder application.
+Depending on which SX130x radio you are running, you will want to select the appropriate Packet
+Forwarder application.
 
 #### Packet Forwarder SX1302
 
-Pull down Helium's fork of the SX1302 packet forwarder:
+Pull down Helium's fork of the SX1302 Packet Forwarder:
 
-`git clone https://github.com/helium/sx1302_hal.git`
+```bash
+$ git clone https://github.com/helium/sx1302_hal.git
+```
 
 Go into the directory and build:
 
-```
+```bash
 $ cd sx1302_hal
 $ make
 ```
 
 Next, go into the the packet_forwarder directory, where we will create a link to the reset script:
 
-```
+```bash
 $ cd packet_forwarder
 $ ln -s ../tools/reset_lgw.sh reset_lgw.sh
 ```
 
 We will also create a link to the appropriate regional configuration. For example:
 
-```
-ln -s global_conf.json.sx1250.US915 global_conf.json
+```bash
+$ ln -s global_conf.json.sx1250.US915 global_conf.json
 ```
 
 We are now ready to test the start-up. From `~/sx1302_hal/packet_forwarder` try:
 
-```
-./lora_pkt_fwd
+```bash
+$ ./lora_pkt_fwd
 ```
 
 If you get the following output, you are good to go:
 
-```
+```bash
 INFO: [main] concentrator started, packet can now be received
 INFO: concentrator EUI: 0x????????????????
 ```
 
-You are now ready to setup the [light hotspot client](/hotspot-makers/iot/light-hotspots).
+You are now ready to set up the [Hotspot client](/hotspot-makers/iot/light-hotspots).
