--- a/docs/use-the-network/roaming.mdx
+++ b/docs/use-the-network/roaming.mdx
@@ -29,8 +29,8 @@ the need for device configurations or firmware updates.
 - **Add Users** - An administrator can add other user accounts with various roles as needed.
 - **Purchase Data Credits** - Data Credits (DCs) are needed to pay for packets sent on the Helium
   Network and can be purchased with a credit card or burning HNT.
-- **Configure Network Integration** - Specify the Home network Server address and port, input roaming
-  device join credentials, and define how many packets to purchase for devices.
+- **Configure Network Integration** - Specify the Home network Server address and port, input
+  roaming device join credentials, and define how many packets to purchase for devices.
 - **Set up Alerts** - Set up email alerts to send to different user roles based on a number of
   conditions including Data Credit balance, user management, or payment methods.
 
