--- a/docs/use-the-network/devices/ready-to-use/abeeway/abeeway-micro-tracker.mdx
+++ b/docs/use-the-network/devices/ready-to-use/abeeway/abeeway-micro-tracker.mdx
@@ -3,10 +3,6 @@ id: abeeway-micro-tracker
 title: Abeeway Micro Tracker
 pagination_label: Abeeway Micro Tracker
 sidebar_label: Abeeway Micro Tracker
-description:
-  Multi-mode, versatile and multi-purpose tracker. With its small size and long battery life, it is
-  the ideal product for numerous tracking applications of things of value, people or pets. At the touch
-  of a button, you can have access to a variety of functionalities personalized for your needs.
 image: img/use-the-network/devices/ready-to-use/abeeway/abeeway-micro-tracker.png
 slug: /use-the-network/devices/ready-to-use/abeeway/abeeway-micro-tracker
 ---
@@ -16,8 +12,8 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 ## Abeeway Micro Tracker
 
 Multi-mode, versatile and multi-purpose tracker. With its small size and long battery life, it is
-the ideal product for numerous tracking applications things of value, people or pets. At the touch
-of a button, you can have access to a variety of functionalities personalized for your needs
+the ideal product for numerous tracking applications of things of value, people or pets. At the
+touch of a button, you can have access to a variety of functionalities personalized for your needs.
 
 <img
   src={useBaseUrl('img/use-the-network/devices/ready-to-use/abeeway/abeeway-micro-tracker.png')}
