--- a/docs/use-the-network/devices/ready-to-use/adeunis/adeunis-field-test-device.mdx
+++ b/docs/use-the-network/devices/ready-to-use/adeunis/adeunis-field-test-device.mdx
@@ -16,9 +16,9 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 ### Introduction
 
-The Adeunis Field Test Device (ARF8124A LoRaWAN US902-928) is a great tool for network testing. It allows you to
-rapidly test network coverage at specific geographical positions to verify that devices will have
-coverage.
+The Adeunis Field Test Device (ARF8124A LoRaWAN US902-928) is a great tool for network testing. It
+allows you to rapidly test network coverage at specific geographical positions to verify that
+devices will have coverage.
 
 ### Resources
 
