Update lpn-td1.mdx (#1452)
Forgot one edit, corrected spelling.

--- a/docs/use-the-network/devices/ready-to-use/comtac/lpn-td1.mdx
+++ b/docs/use-the-network/devices/ready-to-use/comtac/lpn-td1.mdx
@@ -42,7 +42,7 @@ Designed for LoRaWAN - Indoor/outdoor positioning on request with GPS or Wi-Fi
 
 #### Battery:
 
-- type: Rechargable Li-Po Battery 1.4Ah
+- type: Rechargeable Li-Po Battery 1.4Ah
 - replaceable: False
 
 ---
