Update lpn-td1.mdx (#1456)
Forgot to add a period.

Co-authored-by: Sam Gutentag <1404219+samgutentag@users.noreply.github.com>

--- a/docs/use-the-network/devices/ready-to-use/comtac/lpn-td1.mdx
+++ b/docs/use-the-network/devices/ready-to-use/comtac/lpn-td1.mdx
@@ -12,7 +12,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 ## LPN TD-1 Tracker
 
-Designed for LoRaWAN - Indoor/outdoor positioning on request with GPS or Wi-Fi
+Designed for LoRaWAN - Indoor/outdoor positioning on request with GPS or WiFi.
 
 <img src={useBaseUrl('img/use-the-network/devices/ready-to-use/comtac/lpn-td1-foto.jpg')} />
 
