--- a/docs/use-the-network/devices/ready-to-use/decentlab/dl-mbx.mdx
+++ b/docs/use-the-network/devices/ready-to-use/decentlab/dl-mbx.mdx
@@ -1,8 +1,8 @@
 ---
 id: dl-mbx
-title: Dl-Mbx
-pagination_label: Dl Mbx
-sidebar_label: Dl-Mbx
+title: DL-MBX
+pagination_label: DL-MBX
+sidebar_label: DL-MBX
 description: Ultrasonic Distance / Level Sensor For LoRaWAN
 image: img/use-the-network/devices/ready-to-use/decentlab/dl-mbx.jpg
 slug: /use-the-network/devices/ready-to-use/decentlab/dl-mbx
@@ -12,7 +12,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 ## DL-MBX
 
-Ultrasonic Distance / Level Sensor for LoRaWAN
+Ultrasonic Distance / Level Sensor for LoRaWAN.
 
 <img src={useBaseUrl('img/use-the-network/devices/ready-to-use/decentlab/dl-mbx.jpg')} />
 
@@ -36,11 +36,11 @@ Ultrasonic Distance / Level Sensor for LoRaWAN
 
 #### Weight:
 
-- 448 grams
+- 450 grams (including batteries)
 
 #### Battery:
 
-- type: 2 C alkaline
+- type: 2x C alkaline (LR14)
 - replaceable: True
 
 ---
