--- a/docs/use-the-network/devices/ready-to-use/decentlab/dl-5tm.mdx
+++ b/docs/use-the-network/devices/ready-to-use/decentlab/dl-5tm.mdx
@@ -1,8 +1,8 @@
 ---
 id: dl-5tm
-title: Dl-5Tm
-pagination_label: Dl 5Tm
-sidebar_label: Dl-5Tm
+title: DL-5TM
+pagination_label: DL-5TM
+sidebar_label: DL-5TM
 description: Legacy Soil Moisture And Temperature Sensor For LoRaWAN
 image: img/use-the-network/devices/ready-to-use/decentlab/dl-5tm.jpg
 slug: /use-the-network/devices/ready-to-use/decentlab/dl-5tm
@@ -12,7 +12,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 ## DL-5TM
 
-Legacy Soil Moisture and Temperature Sensor for LoRaWAN
+Legacy Soil Moisture and Temperature Sensor for LoRaWAN.
 
 <img src={useBaseUrl('img/use-the-network/devices/ready-to-use/decentlab/dl-5tm.jpg')} />
 
@@ -31,17 +31,24 @@ Legacy Soil Moisture and Temperature Sensor for LoRaWAN
 
 #### Dimensions:
 
+Probe:
+- width: 34 mm
+- length: 109 mm
+- height: 10 mm
+
+Sensor:
 - width: 81 mm
 - length: 135 mm
 - height: 70 mm
 
 #### Weight:
 
-- 555 grams
+- probe: 155 grams (including cable)
+- sensor: 400 grams (including batteries)
 
 #### Battery:
 
-- type: 2 C alkaline
+- type: 2x C alkaline (LR14)
 - replaceable: True
 
 ---
