--- a/docs/use-the-network/devices/ready-to-use/decentlab/dl-dlr2-003.mdx
+++ b/docs/use-the-network/devices/ready-to-use/decentlab/dl-dlr2-003.mdx
@@ -1,8 +1,8 @@
 ---
 id: dl-dlr2-003
-title: Dl-Dlr2-003
-pagination_label: Dl Dlr2 003
-sidebar_label: Dl-Dlr2-003
+title: DL-DLR2-003
+pagination_label: DL-DLR2-003
+sidebar_label: DL-DLR2-003
 description: Digital Input Dry Contact Transmitter For LoRaWAN
 image: img/use-the-network/devices/ready-to-use/decentlab/dl-dlr2.jpg
 slug: /use-the-network/devices/ready-to-use/decentlab/dl-dlr2-003
@@ -12,7 +12,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 ## DL-DLR2-003
 
-Digital Input Dry Contact Transmitter for LoRaWAN
+Digital Input Dry Contact Transmitter for LoRaWAN.
 
 <img src={useBaseUrl('img/use-the-network/devices/ready-to-use/decentlab/dl-dlr2.jpg')} />
 
@@ -36,11 +36,11 @@ Digital Input Dry Contact Transmitter for LoRaWAN
 
 #### Weight:
 
-- 400 grams
+- 400 grams (including batteries and sensor)
 
 #### Battery:
 
-- type: 2 C alkaline
+- type: 2x C alkaline (LR14)
 - replaceable: True
 
 ---
