--- a/docs/use-the-network/devices/ready-to-use/decentlab/dl-dlr2-004.mdx
+++ b/docs/use-the-network/devices/ready-to-use/decentlab/dl-dlr2-004.mdx
@@ -1,9 +1,9 @@
 ---
 id: dl-dlr2-004
-title: Dl-Dlr2-004
-pagination_label: Dl Dlr2 004
-sidebar_label: Dl-Dlr2-004
-description: Analog 4 ... 20 Ma Sensor Transmitter For LoRaWAN
+title: DL-DLR2-004
+pagination_label: DL-DLR2-004
+sidebar_label: DL-DLR2-004
+description: Analog 4 ... 20 mA Sensor Transmitter for LoRaWAN
 image: img/use-the-network/devices/ready-to-use/decentlab/dl-dlr2.jpg
 slug: /use-the-network/devices/ready-to-use/decentlab/dl-dlr2-004
 ---
@@ -12,7 +12,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 ## DL-DLR2-004
 
-Analog 4 ... 20 mA Sensor Transmitter for LoRaWAN
+Analog 4 ... 20 mA Sensor Transmitter for LoRaWAN.
 
 <img src={useBaseUrl('img/use-the-network/devices/ready-to-use/decentlab/dl-dlr2.jpg')} />
 
@@ -27,7 +27,7 @@ Analog 4 ... 20 mA Sensor Transmitter for LoRaWAN
 
 - analog input
 - current
-- 4-20 ma
+- 4-20 mA
 - battery
 
 #### Dimensions:
@@ -38,11 +38,11 @@ Analog 4 ... 20 mA Sensor Transmitter for LoRaWAN
 
 #### Weight:
 
-- 400 grams
+- 400 grams (including batteries)
 
 #### Battery:
 
-- type: 2 C alkaline
+- type: 2x C alkaline (LR14)
 - replaceable: True
 
 ---
