--- a/docs/use-the-network/devices/ready-to-use/decentlab/dl-dlr2-003.mdx
+++ b/docs/use-the-network/devices/ready-to-use/decentlab/dl-dlr2-003.mdx
@@ -36,7 +36,7 @@ Digital Input Dry Contact Transmitter for LoRaWAN
 
 #### Weight:
 
-- 400 grams
+- 400 grams (including batteries)
 
 #### Battery:
 
