--- a/docs/use-the-network/devices/ready-to-use/decentlab/dl-dlr2-008.mdx
+++ b/docs/use-the-network/devices/ready-to-use/decentlab/dl-dlr2-008.mdx
@@ -1,9 +1,9 @@
 ---
 id: dl-dlr2-008
-title: Dl-Dlr2-008
-pagination_label: Dl Dlr2 008
-sidebar_label: Dl-Dlr2-008
-description: Analog Pt100 Sensor Transmitter For LoRaWAN
+title: DL-DLR2-00
+pagination_label: DL-DLR2-00
+sidebar_label: DL-DLR2-00
+description: Analog Pt100 Sensor Transmitter for LoRaWAN
 image: img/use-the-network/devices/ready-to-use/decentlab/dl-dlr2.jpg
 slug: /use-the-network/devices/ready-to-use/decentlab/dl-dlr2-008
 ---
@@ -12,7 +12,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 ## DL-DLR2-008
 
-Analog PT100 Sensor Transmitter for LoRaWAN
+Analog PT100 Sensor Transmitter for LoRaWAN.
 
 <img src={useBaseUrl('img/use-the-network/devices/ready-to-use/decentlab/dl-dlr2.jpg')} />
 
@@ -37,11 +37,11 @@ Analog PT100 Sensor Transmitter for LoRaWAN
 
 #### Weight:
 
-- 400 grams
+- 400 grams (including batteries)
 
 #### Battery:
 
-- type: 2 C alkaline
+- type: 2x C alkaline (LR14)
 - replaceable: True
 
 ---
