--- a/docs/use-the-network/devices/ready-to-use/decentlab/dl-itst.mdx
+++ b/docs/use-the-network/devices/ready-to-use/decentlab/dl-itst.mdx
@@ -1,9 +1,9 @@
 ---
 id: dl-itst
-title: Dl-Itst
-pagination_label: Dl Itst
-sidebar_label: Dl-Itst
-description: Infrared Thermometer / Surface Temperature Sensor For LoRaWAN
+title: DL-ITST-001
+pagination_label: DL-ITST-001
+sidebar_label: DL-ITST-001
+description: Infrared Thermometer / Surface Temperature Sensor for LoRaWAN
 image: img/use-the-network/devices/ready-to-use/decentlab/dl-itst.jpg
 slug: /use-the-network/devices/ready-to-use/decentlab/dl-itst
 ---
@@ -12,7 +12,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 ## DL-ITST
 
-Infrared Thermometer / Surface Temperature Sensor for LoRaWAN
+Infrared Thermometer / Surface Temperature Sensor for LoRaWAN.
 
 <img src={useBaseUrl('img/use-the-network/devices/ready-to-use/decentlab/dl-itst.jpg')} />
 
@@ -26,22 +26,26 @@ Infrared Thermometer / Surface Temperature Sensor for LoRaWAN
 #### Sensors:
 
 - surface temperature
-- temperature
 - battery
 
 #### Dimensions:
 
+Device:
 - width: 81 mm
 - length: 135 mm
 - height: 70 mm
 
+Surface temperature sensor head:
+- diameter: 12 mm
+- length: 87 mm
+
 #### Weight:
 
-- 460 grams
+- 460 grams (including batteries, sensor and cable)
 
 #### Battery:
 
-- type: 2 C alkaline
+- type: 2x C alkaline (LR14)
 - replaceable: True
 
 ---
