--- a/docs/use-the-network/devices/ready-to-use/decentlab/dl-lid.mdx
+++ b/docs/use-the-network/devices/ready-to-use/decentlab/dl-lid.mdx
@@ -1,9 +1,9 @@
 ---
 id: dl-lid
-title: Dl-Lid
-pagination_label: Dl Lid
-sidebar_label: Dl-Lid
-description: Laser Distance / Level Sensor For LoRaWAN
+title: DL-LID
+pagination_label: DL-LID
+sidebar_label: DL-LID
+description: Laser Distance / Level Sensor for LoRaWAN
 image: img/use-the-network/devices/ready-to-use/decentlab/dl-lid.jpg
 slug: /use-the-network/devices/ready-to-use/decentlab/dl-lid
 ---
@@ -12,7 +12,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 ## DL-LID
 
-Laser Distance / Level Sensor for LoRaWAN
+Laser Distance / Level Sensor for LoRaWAN.
 
 <img src={useBaseUrl('img/use-the-network/devices/ready-to-use/decentlab/dl-lid.jpg')} />
 
@@ -30,17 +30,23 @@ Laser Distance / Level Sensor for LoRaWAN
 
 #### Dimensions:
 
+Device:
 - width: 81 mm
 - length: 135 mm
 - height: 70 mm
 
+Sensor:
+- width: 55 mm
+- length: 40.2 mm
+- height: 35 mm
+
 #### Weight:
 
-- 440 grams
+- 440 grams (including batteries and sensor)
 
 #### Battery:
 
-- type: 2 C alkaline
+- type: 2x C alkaline (LR14)
 - replaceable: True
 
 ---
