--- a/docs/use-the-network/devices/development/heltec/cubecell-1-2-aa-node.mdx
+++ b/docs/use-the-network/devices/development/heltec/cubecell-1-2-aa-node.mdx
@@ -1,8 +1,8 @@
 ---
 id: cubecell-1-2-aa-node
-title: HTCC-AB02A
+title: Htcc-Ab02A
 pagination_label: Cubecell 1 2 Aa Node
-sidebar_label: HTCC-AB02A
+sidebar_label: Htcc-Ab02A
 description:
   HTCC-AB02A is a Dev-Board. Friendly designed for developers, easy to verify communication
   solutions.
