--- a/docs/use-the-network/devices/development/heltec/cubecell-capsule-sensor.mdx
+++ b/docs/use-the-network/devices/development/heltec/cubecell-capsule-sensor.mdx
@@ -1,8 +1,8 @@
 ---
 id: cubecell-capsule-sensor
-title: HTCC-AC01
+title: Htcc-Ac01
 pagination_label: Cubecell Capsule Sensor
-sidebar_label: HTCC-AC01
+sidebar_label: Htcc-Ac01
 description:
   HTCC-AC01 is a LoRa end node sensor. With a complete enclosure and protection measures, it can be
   deployed directly into real-world applications.
