--- a/docs/use-the-network/devices/development/heltec/cubecell-module-plus.mdx
+++ b/docs/use-the-network/devices/development/heltec/cubecell-module-plus.mdx
@@ -1,8 +1,8 @@
 ---
 id: cubecell-module-plus
-title: HTCC-AM02
+title: Htcc-Am02
 pagination_label: Cubecell Module Plus
-sidebar_label: HTCC-AM02
+sidebar_label: Htcc-Am02
 description:
   HTCC-AM02 is a Module. Supports AT transparent transmission commands, can be directly integrated
   into the application circuit.
