--- a/docs/use-the-network/devices/development/heltec/cubecell-module.mdx
+++ b/docs/use-the-network/devices/development/heltec/cubecell-module.mdx
@@ -1,8 +1,8 @@
 ---
 id: cubecell-module
-title: HTCC-AM01
+title: Htcc-Am01
 pagination_label: Cubecell Module
-sidebar_label: HTCC-AM01
+sidebar_label: Htcc-Am01
 description:
   HTCC-AM01 is a Module. Supports AT transparent transmission commands, can be directly integrated
   into the application circuit.
