added links and updated formatting

--- a/docs/use-the-network/lorawan-network-servers.mdx
+++ b/docs/use-the-network/lorawan-network-servers.mdx
@@ -29,11 +29,11 @@ Open LNS will deliver the following network improvements:
 1. Increased reliability
 1. Enabling massive scalability
 
-The Open LNS Initiative (link to open lns page)
+[The Open LNS Initiative.][open-lns]
 
 ## Connect and Manage Devices on Helium
 
-There are a couple options to get started onboarding devices and connecting through a Helium LNS:
+There are a couple of options to get started onboarding devices and connecting through a Helium LNS:
 
 ### Work with a Professional LNS Service Provider
 
@@ -42,7 +42,7 @@ and immediate access to a ready-to-go connectivity platform. LNS Services will v
 support, and features depending on the company. Companies may offer public shared servers, and/or
 private servers.
 
-Find a Helium LNS Server Provider. (link to find an lns provider page)
+[Find a Helium LNS Server Provider.][find-provider]
 
 ### Host Your Own LNS
 
@@ -50,4 +50,8 @@ If you are comfortable setting up, configuring, and managing your own servers an
 self-manage your entire solution in-house, hosting your own LNS could be a good option for you. Note
 that this requires expertise and ongoing hosting expenses.
 
-Run an LNS. (link to run an lns page)
+[Run an LNS.][run-lns]
+
+[find-provider]: /find-a-lns-provider
+[run-lns]: /iot/open-lns-quickstart
+[open-lns]: /iot/open-lns
