--- a/docs/network-iot/open-lns-getting-started.mdx
+++ b/docs/network-iot/open-lns-getting-started.mdx
@@ -19,8 +19,8 @@ Before getting started, make sure you have the following:
 
 - Helium Network OUI (Organizationally Unique Identifier)
 - Helium LoRaWAN devAddr slab
-- LoRaWAN Network Server (LNS). A popular option is [ChirpStack](https://www.chirpstack.io). Refer
-  to the ChirpStack documentation for setup and integration instructions.
+- LoRaWAN Network Server (LNS). A popular option is [ChirpStack][chirpstack]. Refer to the
+  ChirpStack documentation for setup and integration instructions.
 
 ## Purchasing OUI and devAddr Slab
 
@@ -33,10 +33,8 @@ cost $100 each.
 After your OUI and devAddr are added, you can now manage your OUI through the Config Service. You
 can interact with the Config Service in two ways:
 
-1. Directly through
-   [GRPC APIs](https://github.com/helium/proto/blob/master/src/service/iot_config.proto)
-2. Using the [Command-Line Interface (CLI)](https://github.com/helium/helium-config-service-cli)
-   detailed below
+1. Directly through [GRPC APIs][grpc-api]
+2. Using the [Command-Line Interface (CLI)][config-cli] detailed below
 
 ### Authenticating with the Config Service
 
@@ -130,3 +128,7 @@ Define your endpoint by running
 ```
 ./helium-config-service-cli route update server --host <host> --port <port> --route-id <route-id> --commit
 ```
+
+[grpc-api]: https://github.com/helium/proto/blob/master/src/service/iot_config.proto
+[config-cli]: https://github.com/helium/helium-config-service-cli
+[chirpstack]: https://www.chirpstack.io
